# AIE-ecosystem-y3t1

./: .gitignore  README.md
Module-AIEcosystem-01/: compose.yml  overview.drawio  overviewlabelstudio.drawio
Module-AIEcosystem-01/backend/: pyproject.toml
Module-AIEcosystem-01/backend/sandbox/: db_test.py  enqueue_job.py  label_studio_test.py  test_settings.py  worker_settings.py
